2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c (struct chunk): Add fields cond_true, cond_false
	and bytes.
	(caption_create): Break the VM construction out of this function...
	(build): ... and put it in this new function.  Add support for
	conditionals, URL and left ellipsizing.
	(caption_render): Break the rendering out of this function...
	(render): ... and put it in this new function.  Add support for
	conditionals, URL and left ellipsizing.
	* src/caption.h (caption_create): Update documentation.
	* src/starling-catalog.c: Update documentation.
	* src/starling.c (change_caption_format): Update the default
	captions.  Update the documentation.

2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (change_caption_format): Only add the defaults
	that are not in the history.

2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (CAPTION_FMT_DEFAULT): Define.
	(KEY_TRACK_CAPTION): Rename from this...
	(KEY_CAPTION_FORMAT): ... to this.  Update users.
	(KEY_CAPTION_FORMAT_HISTORY): Define.
	(config_file_load): New function.
	(config_file_save): Likewise.
	(deserialize): Use them.
	(serialize): Likewise.
	(change_caption_format): New function.
	(title_data_func): Use CAPTION_FMT_DEFAULT.
	(starling_run): Create a menu item for changing the caption
	format.  Connect the "activate" signal to change_caption_format.

2008-10-03  Neal H. Walfield  <neal@gnu.org>

	* src/lastfm.c: Fix spelling, it's utils.h, not util.h.

2008-10-02  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (position_update): Remove extra 0.
	Update the track's duration.

2008-10-02  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_add): Don't scan recovered files.

2008-10-02  Neal H. Walfield  <neal@gnu.org>

	* src/md5.h: Restore file and update copy from glibc.
	* src/md5.c: Likewise.
	* src/Makefile.am: Add md5.h and md5.c.
	* src/lastfm.c (lastfm_md5): Don't use
	g_compute_chechsum_for_data.  Restore previous version.
